Adding 404 and 500 custom page error

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <version>2.2.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
