--- a/src/test/webapp/WEB-INF/web.xml
+++ b/src/test/webapp/WEB-INF/web.xml
@@ -4,17 +4,5 @@
 
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
-    <filter>
-        <filter-name>SparkFilter</filter-name>
-        <filter-class>spark.servlet.SparkFilter</filter-class>
-        <init-param>
-            <param-name>applicationClass</param-name>
-            <param-value>spark.servlet.MyApp</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>SparkFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+        <!--remove filter definition. Configure filter directly in tests-->
 </web-app>
