--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.3</version>
                 <configuration>
+                    <failOnError>false</failOnError>
                 </configuration>
             </plugin>
             <plugin>
