--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.sparkjava</groupId>
     <artifactId>spark-core</artifactId>
     <packaging>bundle</packaging>
-    <version>2.3</version>
+    <version>2.3.vTURA</version>
     <name>Spark</name>
     <description>A Sinatra inspired java web framework</description>
     <url>http://www.sparkjava.com</url>
@@ -27,9 +27,20 @@
     </scm>
     <developers>
     </developers>
-
+	<distributionManagement>
+		<repository>
+			<id>tura.archiva.releases</id>
+			<name>Tura Internal Release Repository</name>
+			<url>http://dev.tura.com/archiva/repository/internal/</url>
+		</repository>
+		<snapshotRepository>
+			<id>tura.archiva.snapshots</id>
+			<name>Tura Internal Snapshot Repository</name>
+			<url>http://dev.tura.com/archiva/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
     <properties>
-        <jetty.version>9.3.2.v20150730</jetty.version>
+        <jetty.version>9.3.5.vTURA</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
