--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.12</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- JETTY DEPENDENCIES -->
