UTS-192 Add test cases for SparkInstanceTest

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <properties>
         <jetty.version>9.3.2.v20150730</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <powermock.version>1.6.4</powermock.version>
     </properties>
 
     <dependencies>
@@ -100,6 +101,12 @@
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
             <version>${jetty.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock.tests</groupId>
+            <artifactId>powermock-tests-utils</artifactId>
+            <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
