--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     </developers>
 
     <properties>
+        <java.version>1.8</java.version>
         <jetty.version>9.3.6.v20151106</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <powermock.version>1.6.4</powermock.version>
@@ -156,8 +157,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <optimize>true</optimize>
                     <debug>true</debug>
                 </configuration>
@@ -175,7 +176,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[1.8,)</version>
+                                    <version>[${java.version},)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
