--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>websocket-servlet</artifactId>
             <version>${jetty.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jmx</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
 
         <!-- JUNIT DEPENDENCY FOR TESTING -->
         <dependency>
