--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.sparkjava</groupId>
     <artifactId>spark-core</artifactId>
     <packaging>bundle</packaging>
-    <version>2.4-SNAPSHOT</version>
+    <version>2.4</version>
     <name>Spark</name>
     <description>A Sinatra inspired java web framework</description>
     <url>http://www.sparkjava.com</url>
@@ -191,7 +191,8 @@
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                     <excludes>
-                        <exclude>**/spark/route/RouteOverviewTest.java</exclude> <!-- Test works in IntelliJ, functionality works in jar, but this fails during mvn install -->
+                        <exclude>**/spark/route/RouteOverviewTest.java</exclude>
+                        <!-- Test works in IntelliJ, functionality works in jar, but this fails during mvn install -->
                     </excludes>
                 </configuration>
             </plugin>
