add dependency self4j-nop for compile datasource local.

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
             <version>1.7.13</version>
             <scope>test</scope>
         </dependency>
-
+		
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.13</version>
+        </dependency>
         <!-- JETTY DEPENDENCIES -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
