Guava's abstract service for awaiting stopped
This patch proposes to implement Spark's Service class
as an AbstractService (from Guava), which provides a
simple API to have both synchronous and asynchronous
control of the service life cycle (start, stop, etc.).

Ref: github.com/perwendel/spark/issues/705

Signed-off-by: Eduardo Bezerra <kdubezerra@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
+
         <!-- LOGGING DEPENDENCIES -->
         <dependency>
             <groupId>org.slf4j</groupId>
