support for Swagger end point in Java Spark Core (JSON Response from /swagger/v2.json

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
