change from jetty-eventsource-servlet to jetty-servlets as a more complete implementation of the SSE spec

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
     <properties>
         <java.version>1.8</java.version>
         <jetty.version>9.4.8.v20171121</jetty.version>
-        <jetty.eventsourceservlet.version>1.0.0</jetty.eventsourceservlet.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <powermock.version>1.6.6</powermock.version>
         <mockito.version>1.10.19</mockito.version>
@@ -75,17 +74,12 @@
             <artifactId>websocket-servlet</artifactId>
             <version>${jetty.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-continuation</artifactId>
+            <artifactId>jetty-servlets</artifactId>
             <version>${jetty.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-eventsource-servlet</artifactId>
-            <version>${jetty.eventsourceservlet.version}</version>
-        </dependency>
-
 
         <!-- JUNIT DEPENDENCY FOR TESTING -->
         <dependency>
