3.sonar-test-code-build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,9 @@ env:
 phases:
   build:
     commands:
-      - echo a
+      - echo "build"
+  install:
+    commands:
+      - echo "install"
 #      - export PULL_REQUEST_ID=`echo ${CODEBUILD_SOURCE_VERSION} | sed -e 's/pr\///'`
 #      - mvn sonar:sonar -Dsonar.login=${SONARQUBE_TOKEN} -Dsonar.github.oauth=${GITHUB_TOKEN} -Dsonar.github.pullRequest=${PULL_REQUEST_ID} -Dsonar.host.url=${SONARQUBE_ENDPOINT}
