--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <jetty.version>9.4.39</jetty.version>
+        <jetty.version>9.4.39.v20210325</jetty.version>
         <slf4j.version>1.7.25</slf4j.version>
         <gson.version>2.8.5</gson.version>
         <freemarker.version>2.3.28</freemarker.version>
