Updated surefire to reduce no of test failures.

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
